# user_database_tg

./: .env  .gitignore  README.txt  pyproject.toml  run_bot.bash  todo.txt
backup/: main_data.json
tests/: test_user_database_tg.py
user_database_tg/: debug_extracted.json  loader.py  main.py
user_database_tg/api/: api_server.py  outgoing_requests.py  schema.py  server.py  utils.py
user_database_tg/app/callback_data/: api_callback.py
user_database_tg/app/filters/: bot_settings.py  change_subscription_filters.py  email_filter.py  payment_filters.py
user_database_tg/app/handlers/: __init__.py  admin_panel.py  api_handlers.py  common_commands.py  data_search.py  errors_handlers.py  main_menu_commands.py  make_api_subscription.py  make_subscription.py
user_database_tg/app/handlers/admin_handlers/: __init__.py  admin_panel.py  api_subscriptions.py  bot_settings.py  menu_settings.py  subscription_settings.py
user_database_tg/app/markups/: __init__.py  admin_menu.py  api.py  bot_settings_markup.py  main_menu.py  subscribe.py  utils.py
user_database_tg/app/messages/: menu.py  message_data.py
user_database_tg/app/middleware/: big_daddy.py  counter.py  father_middleware.py  throttling.py
user_database_tg/app/search_engine/: ya_seeker.py
user_database_tg/app/subscription/: subscription_info.py
user_database_tg/app/translation/: google_translation.py  message_data.py  message_translation.py
user_database_tg/app/utils/: backup.py  daily_processes.py  data_search_helpers.py  payment_processes.py  sub_channel.py  subcribe_processes.py  validations.py
user_database_tg/app/validators/: hash_validator.py
user_database_tg/config/: config.py
user_database_tg/db/: db_main.py  init_db.py  models.py
user_database_tg/db/incorrect_data/: trash.txt
user_database_tg/db/utils/: add_db_users_subs.py  backup.py  import_data.py  mini_utils.py  parsing_data.py
user_database_tg/search_engine/ghunt/: check_and_gen.py  config.py  ghunt.py
user_database_tg/search_engine/ghunt/lib/: banner.py  calendar.py  gmaps.py  listener.py  metadata.py  modwall.py  photos.py  search.py  utils.py  youtube.py
user_database_tg/search_engine/ghunt/modules/: doc.py  email.py  gaia.py  youtube.py
user_database_tg/search_engine/yaseeker/: ya_seeker.py
user_database_tg/utils/: mini.py  mini_utils.py  parsing_data.py
(+2 files in other folders)
