[tool.poetry]
name = "user_database_tg"
version = "0.1.0"
description = ""
authors = ["taimaskhanov11 <81189712+taimaskhanov11@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
loguru = "^0.6.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.18.1"}
aiogram = "^2.19"
environs = "^9.4.0"
pyQiwiP2P = "^1.0.1"
service = "^0.6.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
peewee = "^3.14.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
