[tool.poetry]
name = "user_database_tg"
version = "0.1.0"
description = ""
authors = ["taimaskhanov11 <81189712+taimaskhanov11@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.18.1"}
aiogram = "^2.19"
pyQiwiP2P = "^1.0.1"
httpx = "^0.22.0"
python-dotenv = "^0.19.2"
environs = "^9.5.0"
pydantic = "^1.9.0"
mtranslate = "^1.8"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
peewee = "^3.14.9"
isort = "^5.10.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
